tests/sources/invalid/expressions/expression_at_eof.fire
// Parser error: an initializer expression is expected but the file ends
// immediately after '='.

fn expression_at_eof() -> void {  //~ ERROR FS-PARSE-0010 @32
    x: int32 =  //~ ERROR FS-PARSE-0012 @15
//~^ ERROR FS-PARSE-0010 @15
